@@ -1,6 +1,17 @@
 WinEditLine's (formerly MinGWEditLine) ChangeLog
 ------------------------------------------------
 
+*** December 12, 2017: release of WinEditLine 2.204 ***
+
+  Changes with respect to the previous version include:
+  - install .pdb files when building in Debug mode with MSVC
+
+*** November 20, 2017: release of WinEditLine 2.203 ***
+
+  Changes with respect to the previous version include:
+  - enable building with C89 standard
+  - enable building with MT flag on MSVC
+
 *** May 11, 2017: release of WinEditLine 2.202 ***
 
   Changes with respect to the previous version include:
